# hexrun

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  book.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  model_compatibility.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/hexrun-cli/: Cargo.toml
crates/hexrun-cli/src/: main.rs
crates/hexrun-core/: Cargo.toml
crates/hexrun-core/src/: engine.rs  lib.rs  manifest.rs  sampler.rs
crates/hexrun-registry/: Cargo.toml
crates/hexrun-registry/src/: known.rs  lib.rs  pull.rs
crates/hexrun-server/: Cargo.toml
crates/hexrun-server/src/: lib.rs  ollama.rs  openai.rs
crates/npurun-cli/: Cargo.toml
crates/npurun-cli/src/: main.rs
crates/npurun-core/: Cargo.toml
crates/npurun-core/src/: engine.rs  lib.rs  manifest.rs  sampler.rs
crates/npurun-registry/: Cargo.toml
crates/npurun-registry/src/: known.rs  lib.rs  pull.rs
crates/npurun-server/: Cargo.toml
crates/npurun-server/src/: lib.rs  ollama.rs  openai.rs
crates/qnn/: Cargo.toml
crates/qnn-sys/: Cargo.toml  build.rs
crates/qnn-sys/src/: lib.rs
crates/qnn/examples/: phi-bench.rs  qwen-bench.rs  qwen-genie.rs  qwen3-long.rs
crates/qnn/src/: genie.rs  lib.rs
docs/: SUMMARY.md  architecture.md  benchmarks.md  comparison.md  compatibility.md  findings.md  findings_ort_vs_genie.md  handoff.md  index.md  install.md  multi-graph-fix.md  paper.md  release.md  repo_hygiene.md  roadmap.md  specula_followups.md  troubleshooting.md  usage.md
docs/integrations/: anythingllm.md  continue.md  curl.md  index.md  javascript.md  ollama-clients.md  open-webui.md  python.md  web-chat.md
installer/: AppxManifest.xml  README.md
manifests/b/bpbonker/hexrun/0.1.0-rc.1/: bpbonker.hexrun.installer.yaml  bpbonker.hexrun.locale.en-US.yaml  bpbonker.hexrun.yaml
manifests/b/bpbonker/npurun/0.1.0-rc.2/: bpbonker.npurun.installer.yaml  bpbonker.npurun.locale.en-US.yaml  bpbonker.npurun.yaml
manifests/b/bpbonker/npurun/0.1.0-rc.3/: bpbonker.npurun.installer.yaml  bpbonker.npurun.locale.en-US.yaml  bpbonker.npurun.yaml
python/hex-convert/: README.md  pyproject.toml
python/hex-convert/hex_convert/: __init__.py  cli.py  export.py  inspect.py  manifest.py  pipeline.py
python/hex-convert/tests/: test_manifest.py
python/npu-convert/: README.md  pyproject.toml
python/npu-convert/npu_convert/: __init__.py  cli.py  export.py  inspect.py  manifest.py
python/npu-convert/tests/: test_manifest.py
scripts/: bench-ort-qnn-microbench.py  bench-ort-qnn.py  build-msix.ps1  chat.ps1  dev-cert.ps1  dev-shell.bat  dev-shell.ps1  energy-bench.ps1  genie-run.ps1  package-release.ps1  qai-hub-status.py  qwen3-4b-download-loop.sh  set-pagefile.ps1  setup-qnn.ps1  smoke_phase0.py  stress-chat.py  vl7b-download-loop.sh  vl7b-verify.sh
scripts/wsl-export/: requirements.txt  run-export.sh  setup.sh
tools/web-chat/: index.html
