[package]
name = "hexrun-registry"
description = "Model registry: pull, list, cache, sha256-verified downloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
zip = { workspace = true }
indicatif = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hexrun-core = { path = "../hexrun-core" }
