[package]
name = "qnn-sys"
description = "Raw FFI bindings to the Qualcomm AI Engine Direct (QNN) SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Note: QAIRT does not ship a QnnSystem.lib import library on Windows ARM64,
# only QnnSystem.dll. We bind the C ABI here and load symbols at runtime
# (Phase 1 will use the `libloading` crate or similar). No `links` key.

[lib]
# QNN headers contain doc comments with markdown that rustdoc tries to
# compile as Rust code; the bindings are generated FFI, doctests are useless.
doctest = false

[build-dependencies]
bindgen = { workspace = true }

[features]
default = []
# When set, build.rs hard-fails if QNN_SDK_ROOT is unset.
# When unset (default), build.rs emits stub bindings so the rest of the
# workspace can compile without the QNN SDK present.
require-sdk = []
