[package]
name = "qnn"
description = "Safe ergonomic Rust bindings for the Qualcomm AI Engine Direct (QNN) runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
qnn-sys = { path = "../qnn-sys" }
thiserror = { workspace = true }
tracing = { workspace = true }
