[package]
name = "qnn"
description = "Safe ergonomic Rust bindings for Qualcomm AI Engine Direct (QNN) and Genie LLM runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
qnn-sys = { path = "../qnn-sys" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "qwen-genie"
path = "examples/qwen-genie.rs"

[[example]]
name = "qwen-bench"
path = "examples/qwen-bench.rs"
