[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hex-convert"
version = "0.1.0.dev0"
description = "Convert HuggingFace LLMs to NPU-ready ONNX + QNN context binaries for hexrun"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "hexrun contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxruntime-genai>=0.7",
    "transformers>=4.45",
    "optimum[onnxruntime]>=1.24",
    "datasets>=3.0",
    "huggingface-hub>=0.26",
    "click>=8.1",
    "rich>=13",
    "numpy>=2.0",
    "pyyaml>=6",
]

[project.scripts]
hex-convert = "hex_convert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hex_convert"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
