[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hex-convert"
version = "0.1.0.dev0"
description = "Convert HuggingFace LLMs to NPU-ready ONNX + QNN context binaries for hexrun"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "hexrun contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # `manifest` and `inspect` only need these — they work on Windows ARM64.
    "click>=8.1",
    "rich>=13",
]

[project.optional-dependencies]
# Required for `hex-convert export` only. Heavy, x64-Python-only.
# Install with: pip install -e ".[export]"
export = [
    "qai-hub>=0.49",
    "qai-hub-models>=0.52",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "onnxruntime-genai>=0.7",
    "transformers>=4.45",
    "optimum[onnxruntime]>=1.24",
    "datasets>=3.0",
    "huggingface-hub>=0.26",
    "numpy>=2.0",
    "pyyaml>=6",
]
test = [
    "pytest>=8",
]

[project.scripts]
hex-convert = "hex_convert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hex_convert"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
